# student_grade_system

./: .gitignore  CMakeLists.txt  GradeSystem.cpp  GradeSystem.h  README.md  Student.cpp  Student.h  grades.csv  main.cpp  note.txt  utilities.cpp  utilities.h
base_src/: GradeSystem.cpp  GradeSystem.h  description.txt  grades.csv  main.cpp  student_grades_system.cpp  utilities.cpp
data/: grades.csv  users.csv
doc/: CMake.md  note.md  note.txt
include/: Admin.h  User.h  utilities.h
src/: Admin.cpp  Admin.h  GradeSystem.cpp  GradeSystem.h  Student.cpp  Student.h  User.cpp  User.h  main.cpp  utilities.cpp  utilities.h
